[project]
name = "end-to-end-quantitative-forecasting-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "keras>=3.13.2",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "tensorflow>=2.20.0",
    "yfinance>=1.1.0",
]
